<resources>
    <string name="app_name">StoryAppSubMission1IntermediateAndroid</string>
    <string name="storyApp">Story App</string>
    <string name="welcome">Selamat datang di Story App, tempat dari kumpulan story-story dari berbagai orang lain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account">Anda Belum Daftar Akun ?</string>
    <string name="registration">Daftar Sekarang</string>
    <string name="back">Kembali</string>
    <string name="pageRegistration">Silahkan mengisi formulir pendaftaran akun dibawah ini</string>
    <string name="name">Nama</string>
    <string name="registrationButton">Pendaftaran Akun</string>
    <string name="settingaccount">Pengaturan Akun</string>
    <string name="image_button">Yeah! anda mengklik aksi button</string>
    <string name="Email">Email</string>
    <string name="settingapplication">Pengaturan Aplikasi</string>
    <string name="theme_mode">Mode Gelap</string>
    <string name="informationApplication">Info Aplikasi</string>
    <string name="version_0_1">V.1.0</string>
    <string name="info_fragment">Story App ini merupakan sub mission 1 dari hasil pembelajaran Intermediate Android di dicoding</string>
    <string name="logout">Keluar</string>
    <string name="description">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Mengunggah</string>
    <string name="create">Membuat</string>
    <string name="setting">Pengaturan</string>
    <string name="toolbar1">StoryApp</string>
    <string name="addStory">Tambah Story</string>
    <string name="ready">Mulai Sekarang</string>
    <string name="title_menu_1">Selamat datang di Story App, tempatnya untuk membuat story dan melihat story dari pengalaman para expert dan orang lain</string>
    <string name="title_menu_2">Mari kita mulai untuk membuat story anda</string>
    <string name="email">Email</string>
    <string name="createdAccount">Akun anda berhasil dibuat</string>
    <string name="sukses">login Sukses!</string>
    <string name="failed">username dan password tidak sesuai</string>
    <string name="invalidAccount">akun  tidak berhasil dibuat</string>
    <string name="todo">TODO</string>
    <string name="language">Bahasa</string>
    <string name="invalidEmail">Format email anda tidak benar</string>
    <string name="info_logout">Apakah anda yakin mau keluar dari akun anda?</string>
    <string name="cancel">Tidak</string>
    <string name="Yes">Ya</string>
    <string name="failed_pic">Gagal mengambil photo</string>
    <string name="failed_camera">Gagal memuat camera</string>
    <string name="permission_no_granted">Izin tidak diberikan</string>
    <string name="success_upload">Mengunggah Story Berhasil</string>
    <string name="failed_retrofit">Gagal memuat retrofit</string>
    <string name="add_warning_image">Tolong tambahkan gambar anda</string>
    <string name="invalidPassword">password tidak boleh kurang dari 6 huruf</string>
    <string name="name_account">Masukkan nama lengkap anda</string>
    <string name="email_account">Masukkan email anda</string>
    <string name="password_account">Masukkan password anda</string>
    <string name="empty_location">-</string>
    <string name="location">Lokasi:</string>
    <string name="retry">Coba Lagi</string>
    <string name="todo1">Todo</string>
    <string name="failed_upload">Upload story gagal</string>
    <string name="enable_gps_permission">Mohon izinkan layanan lokasi Anda</string>
    <string name="error">Beberapa kesalahan terjadi</string>
    <string name="something">Ups.. ada yang salah dengan koneksi</string>
    <string name="floating_list">List Story</string>
    <string name="hi">Hi story Friend, sudah tidak sabar ya mau lihat kumpulan story yang sudah di upload oleh teman kamu, Ayo klik list story yang dibawah</string>

</resources>