<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStory">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|start"
            android:text="@string/addStory"
            android:textColor="@color/toolbar" />

        <ImageButton
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_settings_24"
            android:contentDescription="@string/image_button"
            android:padding="20dp"
            tools:ignore="RtlHardcoded" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:srcCompat="@drawable/ic_baseline_image_60">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCamera"
        style="@style/ButtonPrimary"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded"
        android:drawableStart="@drawable/ic_baseline_camera_alt_24"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGallery"
        style="@style/ButtonSecondary"
        android:layout_marginStart="31dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:drawableLeft="@drawable/ic_baseline_image_24"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/gallery"
        android:textColor="@color/accents_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCamera"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/locationInput"
        style="@style/TextContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:text="@string/location"
        app:layout_constraintEnd_toStartOf="@+id/buttonLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCamera" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/description"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/buttonLocation"
        app:layout_constraintStart_toStartOf="@+id/locationInput"
        app:layout_constraintTop_toBottomOf="@+id/locationInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload"
        style="@style/ButtonPrimary"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded"
        android:drawableStart="@drawable/ic_baseline_upload_24"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/descriptionInput"
        app:layout_constraintStart_toStartOf="@+id/descriptionInput"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <ProgressBar
        android:id="@+id/progressAddStory"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/buttonLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonGallery"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/locationInput"
        app:layout_constraintTop_toBottomOf="@+id/buttonGallery" />

</androidx.constraintlayout.widget.ConstraintLayout>