<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="15dp"
    style="@style/cardView"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            tools:src ="@tools:sample/backgrounds/scenic"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo">

        </ImageView>

        <TextView
            android:id="@+id/namePerson"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="31sp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            card_view:layout_constraintEnd_toEndOf="@+id/photo"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/photo"
            card_view:layout_constraintTop_toBottomOf="@+id/photo"
            tools:ignore="RtlHardcoded"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/description"
            style="@style/TextContent.Small"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:maxLines="3"
            android:lines="3"
            card_view:layout_constraintEnd_toEndOf="@+id/namePerson"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/namePerson"
            card_view:layout_constraintTop_toBottomOf="@+id/namePerson"
            tools:text="@string/description"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>